--- a/prayer-wall/templates/prayer-wall/index.html
+++ b/prayer-wall/templates/prayer-wall/index.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>UWMCCF prayer wall</title>
-
-<!-- Bootstrap -->
-
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-</head>
+{% extends "base.html" %}
+{% block body %}
 <body>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-	<div class="title">
-		<div class="container">
-			<h1>Prayer Wall</h1>
-		</div>
-	</div>
 
 	<div class="prayer-form">
 		<div class="container">
 		<form class="form-prayer-wall" method="POST">
 			{%csrf_token%}
 			<!-- <label for="prayer-name">Name</label> -->
-			<input type="text" name="prayer-name" id="prayer-name-input" placeholder="Name">
+			<input type="text" name="prayer-name" id="prayer-name-input" placeholder="Name Test">
 			<input type="text" name="prayer-email" id="prayer-email-input" placeholder="Email">
 			<input type="text" name="prayer-request" id="prayer-request-input" placeholder="Prayer">
 			<input class="btn btn-lg btn-primary btn-block" id="submit" type="submit" value="submit"/>
@@ -37,4 +18,4 @@
 	</div>
 
 </body>
-</html>
+{% endblock %}
