--- a/prayer-wall/templates/index.html
+++ b/prayer-wall/templates/index.html
@@ -1,21 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
-<body>
-
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-    <div class="prayer-form">
-        <div class="container">
-        <form class="form-prayer-wall" method="POST">
-            {%csrf_token%}
-            <!-- <label for="prayer-name">Name</label> -->
-            <input type="text" name="prayer-name" id="prayer-name-input" placeholder="Name Test">
-            <input type="text" name="prayer-email" id="prayer-email-input" placeholder="Email">
-            <input type="text" name="prayer-request" id="prayer-request-input" placeholder="Prayer">
-            <input class="btn btn-lg btn-primary btn-block" id="submit" type="submit" value="submit"/>
-        </form>
+<div ng-app="prayer-requests">
+    <div class="row">
+        <div class="col-md-12">
+            <button type="submit" class="btn btn-primary"
+                    data-ng-click="vm.login()">
+                New Prayer Request
+            </button>
         </div>
     </div>
-
-</body>
+</div>
 {% endblock %}
